--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         </aside>
     </header>
     <main>
-
+        <div>
+            <img src="https://firebasestorage.googleapis.com/v0/b/djplatform.appspot.com/o/profiles%2Ff6XRzwrZ28em2dh7HDuWWzeyt6D2%2Fthumbs%2Ficon_128x128.webp?alt=media&token=197192ef-2300-4976-b57a-41e6cd54083d" alt="Foto-de-perfil">
+        </div>
+        <div>
+             <h3>Thais Reis Amador Bueno</h3>
+        </div>
     </main>
     <footer>
 
