--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <aside>
+            <a class="active" href="#home"></a>
             <a href="sobre.html">Sobre</a>
+            <a href="contato.html">Sobre</a>
         </aside>
     </header>
     <main>
