--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <aside>
             <a class="active" href="#home"></a>
-            <a href="sobre.html">Sobre</a>
-            <a href="contato.html">Sobre</a>
+            <a href="Views/sobre.html">Sobre</a>
+            <a href="Views/contato.html">Contato</a>
         </aside>
     </header>
     <main>
